   - Have a mnemonic widget even in frames with a single child (todo #857).
   - Defines the ofaIAbout interface for the plugins (todo #858).
   - Horizontally align action buttons to use less vertical space (todo #842).
   - Homogeneize visual width and alignment of date entries (todo #852).
   - Add a visual frame around accounts and operation templates treeviews.

 Bug fixes:

   - DossierManager to DossierOpen: keep the current selection (todo #828).
   - OpeTemplates: fix load order of detail rows.
   - Settings: fix multiple loads of the dossiers (todo #833).
   - RenderPage: set action area end-aligned (todo #855).

 Other changes:

   - Upgrade to Gtk+ 3.16.
   - Upgrade to Fedora 22 build chain.
   - Upgrade DBMS to v26.
   - ofaAccountsBook class: renamed to ofaAccountsChart (todo #816).
   - ofaLedgerClose: have a 'All ledgers' button (todo #815).
   - Printings: optimize dataset load.
   - Settings: have a dossier.conf special development (todo #820).
   - BatProperties: make the entries be read-only (todo #829).
   - DossierStore: is an auto-maintained singleton (todo #832).
   - myTimeout: new structure.
   - my_utils_container_attach_from_ui(): new function.
   - my_utils_container_attach_from_window(): new function.
   - my_utils_container_get_buildable_by_name: removed function.
   - my_utils_container_set_editable(): new function.
   - my_utils_size_group_add_size_group(): new function.
   - my_utils_widget_set_editable(): new function.
   - my_utils_widget_set_style(): new function.
   - my_utils_widget_set_margin(): new function.
   - my_utils_widget_set_margin_left(): new function.
   - my_utils_widget_set_margin_right(): new function.
   - my_utils_widget_set_xalign(): new function.
   - ofa_admin_credentials_bin_get_size_group(): new method.
   - ofa_dbms_root_bin_get_size_group(): new method.
   - ofa_idbms_get_provider_from_dossier(): new function.
   - ofo_bat_get_account(): new method.
   - ofo_bat_set_account(): new method.