@@ -42,6 +42,7 @@
                   <object class="GtkEntry" id="acb-account-entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -65,6 +66,7 @@
                   <object class="GtkEntry" id="acb-password-entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
                     <property name="visibility">False</property>
                   </object>
                   <packing>
@@ -89,6 +91,7 @@
                   <object class="GtkEntry" id="acb-passbis-entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
                     <property name="visibility">False</property>
                   </object>
                   <packing>
