@@ -55,6 +55,7 @@
                   <object class="GtkEntry" id="drb-password-entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
                     <property name="visibility">False</property>
                     <property name="input_purpose">password</property>
                   </object>
@@ -67,6 +68,7 @@
                   <object class="GtkEntry" id="drb-account-entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
